--- a/seani/templates/exam/question.html
+++ b/seani/templates/exam/question.html
@@ -1,3 +1,13 @@
+{% extends 'base.html' %}
+
+{% block title %}hola{% endblock  %}
+    
+
+{% block content %}
+    
+
+    
+
 <h1>{{ question.module }}</h1>
 
 {% if question.question_image %}
@@ -41,3 +51,5 @@
 <input type="submit" name="Siguiente">
 
 </form>
+
+{% endblock  %}
