--- a/seani/templates/registration/login.html
+++ b/seani/templates/registration/login.html
@@ -1,8 +1,26 @@
-<h1>Iniciar sesion</h1>
+{% extends "base.html" %}
+{% block title %}Login{% endblock  %}
 
-<form method="post">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit" value="Ingresar">
 
-</form>
+{% block content %}
+    
+
+<center><h1>Iniciar sesion</h1></center>
+
+
+<div class="cart">
+
+    <form method="post">
+        {% csrf_token %}
+        {{form}}
+        
+        <input type="submit" value="Ingresar">
+    
+    </form>
+
+
+</div>
+
+
+
+{% endblock  %}
